--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,111 @@
 body {
-  background-color: lightgreen;
+  margin: 0;
+  font-family: Roboto, sans-serif;
+  color: #4f4f4f;
+}
+
+.app {
+  height: 100vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search-box {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 188px;
+  width: 877px;
+}
+
+.search-box .logo {
+  margin: 0;
+  position: absolute;
+  top: 0px;
+  font-size: 36px;
+  font-weight: 100;
+  pointer-events: none;
+  z-index: 1000;
+}
+
+.search-box .logo .logo-stars {
+  font-weight: normal;
+  color: #5253b9;
+}
+
+.search-box .input-box {
+  position: absolute;
+  bottom: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  /* FF 4-18 */
+  /* FF 19+ */
+  /* IE 10+ */
+}
+
+.search-box .input-box .search-field {
+  width: 809px;
+  height: 91px;
+  padding: 0 34px;
+  border: none;
+  border-bottom: 1px solid transparent;
+  outline: none;
+  -webkit-box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.15);
+          box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.15);
+}
+
+.search-box .input-box .search-field:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.search-box .input-box .search-field:focus:-moz-placeholder {
+  color: transparent;
+}
+
+.search-box .input-box .search-field:focus::-moz-placeholder {
+  color: transparent;
+}
+
+.search-box .input-box .search-field:focus:-ms-input-placeholder {
+  color: transparent;
+}
+
+.search-box .input-box .search-icon {
+  position: absolute;
+  right: 34px;
 }
 /*# sourceMappingURL=main.css.map */
