Correct authentication error
I was being bugged by an auth error due to a static token. Now authentication and starring are working properly
due to the use of the accessToken provided on login.

Signed-off-by: raul-f <raulf.dev@gmail.com>

--- a/src/main.css
+++ b/src/main.css
@@ -356,6 +356,11 @@ body {
   border-radius: 5px;
 }
 
+.target-user-box .repositories .language-filter {
+  margin-top: 10px;
+  min-height: 4.88281vh;
+}
+
 .target-user-box .repositories .single-repository {
   overflow: hidden;
   width: 52.08333vw;
