--- a/src/main.scss
+++ b/src/main.scss
@@ -209,6 +209,10 @@ body {
     .language-filter {
       margin-top: 10px;
       min-height: (50 / $scaleY) * 100vh;
+      box-shadow: 4px 4px 40px 0px rgba($color: #000000, $alpha: 0.25);
+      border: none;
+      border-radius: 5px;
+      background-color: white;
     }
     .single-repository {
       overflow: hidden;
